# Workflow

./: config.yaml  create.py
resources/: description.yaml
resources/sampleProject/: CMakeLists.txt  Makefile  main.cpp
scripts/: generateSchema.py  tagsManager.py  testRun.py
scripts/ccs/: addProject  calculator.py  general.py  projects.py  validateInput.py
